# Randarc-Astra

./: .gitignore  README.md  README_PERSONAL.md  pytest.ini  requirements-dev.txt  ruff.toml
LEGAL/: THIRD_PARTY_NOTICES.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: bridge.rs  macos_main_queue.rs  main.rs
apps/desktop/src-tauri/src/autopilot/: input.rs  mod.rs  permissions.rs  screen.rs
apps/desktop/src-tauri/src/skills/: computer.rs  mod.rs  shell.rs
archive/: README.md
core/: assistant_phrases.py  chat_context.py  event_bus.py  intent_router.py  llm_routing.py  memory_normalize.py  planner.py  run_engine.py  secrets.py  skill_context.py
docs/: API.md  ARCHITECTURE.md  ASTRA_STATE_AND_REQUIREMENTS_STRUCTURED.md  CONFIG.md  DEVELOPMENT.md  README.md  REMINDERS_V1.md  RUNBOOK_DEV.md  SECURITY.md  SKILLS.md  STABILIZATION_PLAN.md  STATE_OF_UI.md  TROUBLESHOOTING.md  UI_GUIDE.md  план Б
memory/: db.py  store.py  vault.py
prompts/: autopilot_system.txt  core_identity.md  extract_facts_system.txt  memory_interpreter.txt  memory_normalize_system.txt  semantic_decision.md  semantic_intent_actions_system.txt  tone_pipeline.md  variation_rules.md  web_research_answer.txt  web_research_judge.txt
schemas/: approval.schema.json  artifact.schema.json  conflict.schema.json  event.schema.json  fact.schema.json  plan_step.schema.json  project.schema.json  run.schema.json  skill_manifest.schema.json  skill_result.schema.json  source.schema.json  task.schema.json
scripts/: astra  doctor.sh  models.sh  qa.sh  run.sh  stop.sh  (+2 more)
(+159 files in other folders)
