[package]
name = "randarc-astra-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "global-shortcut-all", "shell-open", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
tiny_http = "0.12"
enigo = { version = "0.6.1", optional = true }
xcap = { version = "0.8.0", optional = true }
image = { version = "0.25.9", optional = true }
base64 = { version = "0.22", optional = true }
thiserror = { version = "2", optional = true }

[features]
default = ["custom-protocol", "desktop-skills"]
custom-protocol = ["tauri/custom-protocol"]
desktop-skills = ["enigo", "xcap", "image", "base64", "thiserror"]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
foreign-types = "0.5"
